cod-tools (unreleased)

  * Added:
    - cif_cod_check:
      - the --check-pd-block-relations and its inverse options that control
        the execution of checks related to powder diffraction blocks.
    - COD::CIF::Data:
      - the get_formula_units_z() subroutine.
  * Changed:
    - cif_cod_check:
      - modifying the warning message about missing authors to use the same
        format as other warnings about missing data items.
      - replacing test case 'cif_cod_check_111' with test case
        'cif_cod_check_115' since test case 'cif_cod_check_111' was a
        duplicate of 'cif_cod_check_107'.
    - COD::CIF::Data::Check:
      - modifying the check_author_names() subroutine to no longer raise
        warnings about missing _publ_author_name data items.
    - COD::CIF::Data::CIF2COD:
      - the module no longer returns empty strings instead of NULL values
        for the author and title fields;
      - modifying the Z value handling logic to use the get_formula_units_z()
        subroutine and to try to estimate the Z value from other data items
        in cases when it is malformed or not provided.
      - the calculated cell volume is now reused in other calculations
        instead repeatedly calculating it.
    - COD::CIF::Data::EstimateZ:
      - the cif_estimate_z() subroutine now accepts optional parameters
        that override the data values provided in the CIF data block.
    - COD::Spacegroups::Lookup::COD:
      - renaming space group 'P 1 (-a,-b+c,b+c)' to 'A 1';
      - renaming space group 'P 1 (-a+c,-b,a+c)' to 'B 1';
      - renaming space group 'P 1 (b+c,a+c,a+b)' to 'I 1';
      - replacing the Hall space group symbol with a shorter one for
        space groups from the extra_settings hash.
  * Removed:
    - cif_cod_check:
      - unused COD::CIF::Tags::Manage::tag_is_empty() import.
  * Fixed:
    - pycodcif:
      - executing 'swig' to the build Python module prior to installing