@@ -16,7 +16,7 @@ _journal_year                    1976
 _chemical_formula_sum            'Ca5.81 Mn.19 Si6 O18'
 _chemical_name_mineral           Wollastonite-1A
 _space_group_IT_number           2
-_symmetry_space_group_name_Hall  '-P 1 (1/2*x+1/2*y,1/2*x-1/2*y,-z)'
+_symmetry_space_group_name_Hall  '-C 1'
 _symmetry_space_group_name_H-M   'C -1'
 _cell_angle_alpha                99.53
 _cell_angle_beta                 100.56
