@@ -27,8 +27,7 @@ _chemical_name_systematic
 ;
 _space_group_IT_number           2
 _symmetry_cell_setting           triclinic
-_symmetry_space_group_name_Hall
-'-P 1 (-1/2*x+1/2*y+1/2*z,1/2*x-1/2*y+1/2*z,1/2*x+1/2*y-1/2*z)'
+_symmetry_space_group_name_Hall  '-I 1'
 _symmetry_space_group_name_H-M   'I -1'
 _cell_angle_alpha                90.001(10)
 _cell_angle_beta                 90.5090(10)
