@@ -10384,7 +10384,7 @@ _chemical_name_systematic
 ;
 _space_group_IT_number           2
 _symmetry_cell_setting           triclinic
-_symmetry_space_group_name_Hall  '-P 1 (1/2*x+1/2*y,1/2*x-1/2*y,-z)'
+_symmetry_space_group_name_Hall  '-C 1'
 _symmetry_space_group_name_H-M   'C -1'
 _atom_sites_solution_hydrogens   geom
 _atom_sites_solution_primary     direct
@@ -11213,7 +11213,7 @@ _chemical_name_systematic
 ;
 _space_group_IT_number           2
 _symmetry_cell_setting           triclinic
-_symmetry_space_group_name_Hall  '-P 1 (1/2*x+1/2*y,1/2*x-1/2*y,-z)'
+_symmetry_space_group_name_Hall  '-C 1'
 _symmetry_space_group_name_H-M   'C -1'
 _atom_sites_solution_hydrogens   geom
 _atom_sites_solution_primary     direct
