@@ -8,6 +8,10 @@ B -1
 C -1
 F -1
 I -1
+F d 1 1
+F 1 d 1
+F 1 1 d
+C 1 c 1 (a-3/8,b-3/8,a+2*c)
 R 1 2/c 1
 P 21 21 21 (origin shift x,y,z+1/4)
 B 1 21 1
